--- a/templates/main.html
+++ b/templates/main.html
@@ -11,6 +11,7 @@
 			integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
 			crossorigin="anonymous"
 		/>
+		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
 	</head>
 	<body class="bg-dark">
 		<main class="text-white">
@@ -40,15 +41,12 @@
 				</form>
 			</nav>
 			<div class="container-fluid row mx-auto">
-				<section class="col-lg-auto p-2 mx-auto border border-white">
+				<section class="col p-2 mx-auto border border-white">
 					<h1 class="text-center">Map</h1>
-					<img
-						class="img-fluid"
-						src="https://belon.club/uploads/posts/2023-04/1681537378_belon-club-p-solnechnii-kotenok-vkontakte-3.jpg"
-					/>
+					<div id="map"></div>
 				</section>
 
-				<section class="col-lg p-2 mx-auto border border-white">
+				<section class="col-sm-5 mx-auto border border-white">
 					<div class="d-flex align-items-center">
 						<a class="col"></a>
 						<h1 class="col text-center">Info</h1>
@@ -84,6 +82,7 @@
 			</div>
 		</main>
 		<script src="../static/js/tableFill.js"></script>
+		<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
